show sent frames in ui

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,4 +79,4 @@ services:
                     - -c
                     - |
                         sleep 20;
-                        gabriel_client --ip 172.18.0.2
+                        gabriel_client_ui --ip 172.18.0.2
