--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,4 +77,4 @@ services:
                 entrypoint:
                     - /bin/bash
                     - -c
-                    - gabriel_client_ui --ip 172.18.0.2
+                    - gabriel_client_ui --ip gabriel_control
